<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:elevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_160"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/placeholder"
            android:contentDescription="@string/placeholder_image" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_image"
            android:fontFamily="serif"
            android:text="@string/name"
            android:layout_marginTop="@dimen/dp_5"
            android:textColor="@color/text_color_toolbar"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/sub_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/subname"
            android:textColor="@color/text_color_background"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/other_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sub_name"
            android:text="@string/other_details"
            android:textColor="@color/text_color_background"
            android:textSize="@dimen/sp_16" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
