<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DataListActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:elevation="5dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:contentInsetStartWithNavigation="0dp"
        app:title="@string/app_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@android:color/darker_gray"
        android:clipToPadding="false"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/no_internet_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/no_internet_available"
            android:textColor="@color/text_color_background"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <Button
            android:id="@+id/try_again"
            style="@style/CardView"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/try_again"
            android:textColor="@color/red"
            android:textSize="@dimen/sp_24"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>