<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.DataDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:elevation="5dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/app_street_task_details_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_5"
                android:elevation="@dimen/dp_2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/dp_10">

                    <ImageView
                        android:id="@+id/user_image"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/placeholder" />

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/user_image"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/name"
                        android:textColor="@color/text_color_toolbar"
                        android:textSize="@dimen/sp_18" />

                    <TextView
                        android:id="@+id/repo_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/user_name"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/subname"
                        android:textColor="@color/text_color_background"
                        android:textSize="@dimen/sp_16" />

                    <TextView
                        android:id="@+id/repo_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/repo_name"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:maxLines="2"
                        android:text="@string/description"
                        android:textColor="@color/text_color_background"
                        android:textSize="@dimen/sp_16" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <WebView
                android:id="@+id/wv_repo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view"
                android:scrollbars="none" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>